# synap

./: .codespellignore  .cursorrules  .dockerignore  .gitignore  .gitmodules  .markdownlint.json  .rulebook  AGENTS.md  AGENTS.override.md  BUILD.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOCKER_README.md  DOCS_REORGANIZATION_SUMMARY.md  Dockerfile  FINAL_SUMMARY.md  README.md  _typos.toml  config-cluster.yml  config-master.yml  config-replica.yml  config.development.yml  config.example.yml  config.production.yml  config.yml  deny.toml  docker-compose.yml  lcov.info  rust-toolchain.toml  tatus --short  test_all_rest_routes.sh  test_bitmap_rest.sh
.cargo/: audit.toml  (+1 more)
crates/synap-cli/: Cargo.toml  README.md
crates/synap-cli/src/: main.rs
crates/synap-core/: Cargo.toml
crates/synap-core/src/: lib.rs
crates/synap-core/src/cache/: l2_disk.rs
crates/synap-core/src/cluster/: config.rs  discovery.rs  failover.rs  hash_slot.rs  migration.rs  raft.rs  tests.rs  topology.rs
crates/synap-core/src/core/: cache.rs  consumer_group.rs  error.rs  geospatial.rs  glob.rs  hash.rs  hyperloglog.rs  key_lock.rs  key_manager.rs  keyspace.rs  list.rs  memory.rs  mod.rs  partition.rs  pubsub.rs  queue.rs  set.rs  sorted_set.rs  stream.rs  transaction.rs  types.rs  watch.rs
crates/synap-core/src/simd/: aarch64.rs  fallback.rs  mod.rs  wasm.rs  x86.rs
crates/synap-protocol/: Cargo.toml
crates/synap-protocol/src/: lib.rs
crates/synap-protocol/src/resp3/: mod.rs  parser.rs  writer.rs
crates/synap-protocol/src/synap_rpc/: codec.rs  mod.rs  types.rs
scripts/bench/bench-vs-redis/: Cargo.toml
scripts/bench/bench-vs-redis/src/: main.rs
sdks/rust/: AGENTS.md  CHANGELOG.md  COVERAGE_REPORT.md  Cargo.toml  PUBLISH_CHECKLIST.md  REACTIVE.md  REACTIVE_COMPARISON.md  README.md  lcov.info
sdks/rust/docs/: COVERAGE_REPORT.md  REACTIVE.md
sdks/rust/examples/: authentication.rs  basic.rs  interop.rs  pubsub.rs  queue.rs  reactive_pubsub.rs  reactive_queue.rs  reactive_stream.rs  rxjs_style.rs  stream.rs
sdks/rust/src/: bitmap.rs  client.rs  error.rs  geospatial.rs  hash.rs  hyperloglog.rs  kv.rs  kv_test.rs  kv_watch.rs  lib.rs  list.rs  pubsub.rs  pubsub_reactive.rs  pubsub_test.rs  queue.rs  queue_reactive.rs  queue_test.rs  reactive.rs  scripting.rs  set.rs  sorted_set.rs  stream.rs  stream_reactive.rs  stream_test.rs  transactions.rs  transport.rs  types.rs
sdks/rust/src/rx/: README.md  mod.rs  observable.rs  operators.rs  subject.rs
sdks/rust/tests/: authentication_test.rs  bitmap_mock_test.rs  bitmap_s2s_test.rs  common.rs  e2e_test.rs  geospatial_mock_test.rs  geospatial_s2s_test.rs  hash_test.rs  hyperloglog_s2s_test.rs  hyperloglog_test.rs  kv_test.rs  list_test.rs  pubsub_test.rs  queue_reactive_test.rs  queue_test.rs  scripting_test.rs  set_test.rs  sorted_set_mock_test.rs  sorted_set_test.rs  stream_reactive_test.rs  stream_test.rs  transactions_test.rs
synap-cli/: Cargo.toml
synap-cli/src/: main.rs
synap-migrate/: Cargo.toml  README.md
synap-migrate/src/: backup.rs  main.rs  migrate.rs  rollback.rs  snapshot.rs  validate.rs
synap-server/: Cargo.toml  temp_add_dep.ps1
synap-server/benches/: compression_bench.rs  hash_bench.rs  hybrid_bench.rs  key_management_bench.rs  kv_bench.rs  kv_persistence_bench.rs  kv_replication_bench.rs  list_bench.rs  persistence_bench.rs  pubsub_bench.rs  queue_bench.rs  queue_persistence_bench.rs  redis_vs_synap.rs  replication_bench.rs  simd_bench.rs  stream_bench.rs  transaction_bench.rs
synap-server/src/: config.rs  lib.rs  main.rs
synap-server/src/auth/: acl.rs  api_key.rs  audit.rs  extractor.rs  mcp_context.rs  middleware.rs  mod.rs  permission_checker.rs  permissions.rs  user.rs
synap-server/src/cache/: l2_disk.rs  mod.rs
synap-server/src/cluster/: config.rs  discovery.rs  failover.rs  migration.rs  mod.rs  tests.rs  types.rs
synap-server/src/compression/: compressor.rs  mod.rs
synap-server/src/core/: bitmap.rs  cache.rs  consumer_group.rs  error.rs  geospatial.rs  hyperloglog.rs  key_manager.rs  kv_store.rs  list.rs  mod.rs  partition.rs  pubsub.rs  queue.rs  set.rs  sorted_set.rs  stream.rs  transaction.rs  types.rs
synap-server/src/hub/: client.rs  cluster_quota.rs  hub_auth.rs  mod.rs  multi_tenant.rs  sdk.rs  sdk_stubs.rs  usage.rs
synap-server/src/metrics/: mod.rs
synap-server/src/monitoring/: client_list.rs  info.rs  memory_usage.rs  mod.rs  slowlog.rs
synap-server/src/persistence/: layer.rs  mod.rs  queue_persistence.rs  recovery.rs  snapshot.rs  stream_persistence.rs  tests.rs  types.rs  wal.rs  wal_async.rs  wal_optimized.rs
synap-server/src/protocol/: envelope.rs  mod.rs
synap-server/src/replication/: config.rs  failover.rs  master.rs  replica.rs  replication_log.rs  sync.rs  tests.rs  types.rs
synap-server/src/scripting/: mod.rs
synap-server/src/server/: auth_handlers.rs  handlers.rs  mcp_handlers.rs  mcp_server.rs  mcp_tools.rs  metrics_handler.rs  mod.rs  rate_limit.rs  router.rs
synap-server/src/simd/: mod.rs
synap-server/tests/: README_S2S_TESTS.md  app_state_helper.rs  auth_audit_tests.rs  auth_edge_cases_tests.rs  auth_middleware_comprehensive_tests.rs  auth_middleware_tests.rs  auth_password_validation_tests.rs  auth_permission_integration_tests.rs  auth_security_comprehensive_tests.rs  auth_security_tests.rs  bitmap_integration_tests.rs  cluster_integration_tests.rs  cluster_kv_routing_tests.rs  cluster_rest_api_tests.rs  config_tests.rs  error_handling_tests.rs  geospatial_integration_tests.rs  gzip_compression_tests.rs  hash_integration_tests.rs  http_status_codes_tests.rs  hyperloglog_integration_tests.rs  integration_cache_tests.rs  integration_hybrid_storage.rs  integration_performance.rs  integration_persistence_e2e.rs  integration_tests.rs  kafka_style_integration.rs  key_management_s2s_tests.rs  kv_replication_tests.rs  list_integration_tests.rs  lua_scripting_tests.rs  mcp_auth_integration_tests.rs  mcp_tests.rs  monitoring_s2s_tests.rs  protocol_tests.rs  pubsub_tests.rs  replication_extended.rs  replication_integration.rs  s2s_pubsub_tests.rs  s2s_rest_tests.rs  (+14 more)
(+1466 files in other folders)
