[workspace]
resolver = "2"
members = ["synap-server", "synap-cli"]

[workspace.package]
version = "0.1.0-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["HiveLLM Team"]
license = "MIT"
repository = "https://github.com/hivellm/synap"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
radix_trie = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1.0"
anyhow = "1.0"
tower-http = { version = "0.5", features = ["trace", "cors"] }
serde_yaml = "0.9"
uuid = { version = "1.6", features = ["v4", "serde"] }
lz4 = "1.24"
zstd = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

