[workspace]
resolver = "2"
members = ["synap-server", "synap-cli", "sdks/rust"]

[workspace.lints.clippy]
# Allow field reassignment in tests/benches (common pattern)
field_reassign_with_default = "allow"

[workspace.package]
version = "0.6.0-alpha"
edition = "2024"
rust-version = "1.85"
authors = ["HiveLLM Team"]
license = "MIT"
repository = "https://github.com/hivellm/synap"

[workspace.dependencies]
tokio = { version = "1.48", features = ["full"] }
axum = "0.8"
radix_trie = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
tower-http = { version = "0.6", features = ["trace", "cors", "compression-gzip"] }
serde_yaml = "0.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
lz4 = "1.24"
zstd = "0.13"
bcrypt = "0.16"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.9"
compact_str = { version = "0.8", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

