[workspace]
resolver = "2"
members = ["crates/*", "sdks/rust"]

[workspace.lints.clippy]
# Allow field reassignment in tests/benches (common pattern)
field_reassign_with_default = "allow"

[workspace.package]
version = "1.2.3"
edition = "2024"
rust-version = "1.92"
authors = ["HiveLLM Team"]
license = "Apache-2.0"
repository = "https://github.com/hivellm/synap"

[workspace.dependencies]
# HiveLLM shared binary RPC (wire v1, frozen). The registry name is
# `thunder-rpc`; the lib name is `thunder`, so call sites say `use thunder::`.
# Server and SDK pin the same version so they cannot drift apart.
thunder-rpc = { version = "0.2.1", default-features = false }
tokio = { version = "1.48", features = ["full"] }
axum = "0.8"
radix_trie = "0.2"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "2.0"
anyhow = "1.0"
tower-http = { version = "0.7", features = ["trace", "cors", "compression-gzip"] }
serde_yaml = "0.9"
uuid = { version = "1.11", features = ["v4", "serde"] }
lz4 = "1.24"
zstd = "0.13"
bcrypt = "0.19"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
rand = "0.10"
compact_str = { version = "0.10", features = ["serde"] }

[profile.dev]
# Keep file:line in panics/backtraces but drop full variable debuginfo — the
# single biggest lever on `target/` size, and ~30-40% faster incremental
# rebuilds (Rust perf-team, Kobzol 2025). See docs/rust-target-hygiene.md.
debug = "line-tables-only"

[profile.release]
opt-level = 3
lto = "fat"              # Fat LTO for better optimization across crates
codegen-units = 1        # Single codegen unit for maximum optimization
strip = true             # Strip symbols for smaller binary
panic = "abort"          # Smaller binary size (no unwinding code)
incremental = false      # Disable incremental for release (faster final build)

