[package]
name = "synap-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "synap-cli"
path = "src/main.rs"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
rustyline = "17.0"
colored = "2.1"
uuid = { version = "1.6", features = ["v4"] }
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

