[package]
name = "synap-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Migration tool for Synap standalone to HiveHub.Cloud SaaS mode"

[[bin]]
name = "synap-migrate"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
anyhow.workspace = true
thiserror.workspace = true
uuid.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter"] }

# CLI framework
clap = { version = "4.5", features = ["derive"] }

# Progress bars
indicatif = "0.18"

# Date/time for backups
chrono.workspace = true

# File operations
walkdir = "2.4"

# Hash checksums
crc = "3.0"
