[package]
name = "synap-protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Synap wire protocol — RESP3 and SynapRPC (MessagePack) serialization/parsing"

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true }
rmp-serde = "1.3"
uuid = { version = "1.11", features = ["v4"] }
