[package]
name = "synap-sdk"
version = "0.3.0"
edition = "2024"
rust-version = "1.85"
authors = ["HiveLLM Team"]
license = "MIT"
description = "Rust SDK for Synap - High-Performance In-Memory Key-Value Store & Message Broker"
repository = "https://github.com/hivellm/synap"
keywords = ["synap", "kv-store", "message-queue", "event-stream", "pubsub"]
categories = ["database", "network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"

# RxJS-style reactive programming
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
pin-project = "1.1"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
tracing-subscriber = "0.3"

[lib]
name = "synap_sdk"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "queue"
path = "examples/queue.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "pubsub"
path = "examples/pubsub.rs"

[[example]]
name = "reactive_queue"
path = "examples/reactive_queue.rs"

[[example]]
name = "reactive_stream"
path = "examples/reactive_stream.rs"

[[example]]
name = "rxjs_style"
path = "examples/rxjs_style.rs"

[[example]]
name = "reactive_pubsub"
path = "examples/reactive_pubsub.rs"
