[package]
name = "synap-sdk"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust SDK for Synap - High-Performance In-Memory Key-Value Store & Message Broker"
repository.workspace = true
keywords = ["synap", "kv-store", "message-queue", "event-stream", "pubsub"]
categories = ["database", "network-programming", "asynchronous"]

[dependencies]
tokio = { version = "1.48", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"
async-trait = "0.1"
url = "2.5"
uuid = { version = "1.11", features = ["v4"] }
base64 = "0.22"
rmp-serde = "1"

# RxJS-style reactive programming
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
pin-project = "1.1"
tokio-tungstenite = { version = "0.29", features = ["native-tls"] }

[features]
e2e = []

[dev-dependencies]
tokio-test = "0.4"
mockito = "1.6"
tracing-subscriber = "0.3"
tempfile = "3"

[lib]
name = "synap_sdk"
path = "src/lib.rs"

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "queue"
path = "examples/queue.rs"

[[example]]
name = "stream"
path = "examples/stream.rs"

[[example]]
name = "pubsub"
path = "examples/pubsub.rs"

[[example]]
name = "reactive_queue"
path = "examples/reactive_queue.rs"

[[example]]
name = "reactive_stream"
path = "examples/reactive_stream.rs"

[[example]]
name = "rxjs_style"
path = "examples/rxjs_style.rs"

[[example]]
name = "reactive_pubsub"
path = "examples/reactive_pubsub.rs"
