[workspace]

[package]
name = "bench-vs-redis"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "bench-vs-redis"
path = "src/main.rs"

[dependencies]
redis = { version = "0.28", features = ["tokio-comp", "connection-manager"] }
synap-server = { path = "../../synap-server" }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7" }
hdrhistogram = "7"
human_bytes = "0.4"
serde_json = "1"
